# crm

./: .gitignore  README.md  db.sqlite3  pyproject.toml
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_order_product.py  0003_order_customer_order_product.py  0004_tag_order_tags.py  0005_remove_order_tags_product_tags.py
accounts/templates/accounts/: customer.html  dashboard.html  main.html  navbar.html  products.html  status.html
crm/: settings.py  urls.py
static/css/: main.css
static/images/: logo.xcf
